# ScientificComputing_Set2

./: .gitignore  LICENSE  README.md  Team_effort_distribution.docx  pyproject.toml  requirements.txt
data/: all_avg_successful_walk_lengths_0_1_sp.npy  all_avg_successful_walk_lengths_0_2_sp.npy  all_avg_successful_walk_lengths_0_3_sp.npy  all_avg_successful_walk_lengths_0_4_sp.npy  all_avg_successful_walk_lengths_0_5_sp.npy  all_avg_successful_walk_lengths_0_6_sp.npy  all_avg_successful_walk_lengths_0_7_sp.npy  all_avg_successful_walk_lengths_0_8_sp.npy  all_avg_successful_walk_lengths_0_9_sp.npy  all_avg_successful_walk_lengths_1_0_sp.npy  all_avg_walk_lengths_0_1_sp.npy  all_avg_walk_lengths_0_2_sp.npy  all_avg_walk_lengths_0_3_sp.npy  all_avg_walk_lengths_0_4_sp.npy  all_avg_walk_lengths_0_5_sp.npy  all_avg_walk_lengths_0_6_sp.npy  all_avg_walk_lengths_0_7_sp.npy  all_avg_walk_lengths_0_8_sp.npy  all_avg_walk_lengths_0_9_sp.npy  all_avg_walk_lengths_1_0_sp.npy  all_successful_walks_0_1_sp.npy  all_successful_walks_0_2_sp.npy  all_successful_walks_0_3_sp.npy  all_successful_walks_0_4_sp.npy  all_successful_walks_0_5_sp.npy  all_successful_walks_0_6_sp.npy  all_successful_walks_0_7_sp.npy  all_successful_walks_0_8_sp.npy  all_successful_walks_0_9_sp.npy  all_successful_walks_1_0_sp.npy  all_walk_counts_0_1_sp.npy  all_walk_counts_0_2_sp.npy  all_walk_counts_0_3_sp.npy  all_walk_counts_0_4_sp.npy  all_walk_counts_0_5_sp.npy  all_walk_counts_0_6_sp.npy  all_walk_counts_0_7_sp.npy  all_walk_counts_0_8_sp.npy  all_walk_counts_0_9_sp.npy  all_walk_counts_1_0_sp.npy  (+5 more)
data - Copy/: many_runs_eta_2.npy
scripts/: many_runs_args copy.txt  many_runs_args.txt  many_runs_hist.py  optimal_omega.py  run_multiple.sh  script_compare_DLA.py  script_gray_scott.py  script_monte_carlo_multiple.py  script_monte_carlo_plot_multi.py  script_monte_carlo_sim_multi.py  script_monte_carlo_single.py  scrpt_monte_carlo.py  single_run_dla.py
src/: __init__.py  dla_fin_diff.py  finite_difference.py  gray_scott.py  monte_carlo.py  utils.py
test/: test_gray_scott.py  test_monte_carlo.py  tests_dla.py
