[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ScientificComputing_Set2"
version = "0.1"
description = "A collection of classes to complete Assignment Set 2 for Scientific Computing"
authors = [
    { name="Victoria Peterson" },
    { name="Karolina Chlopicka" },
    { name="Paul Jungnickel" }
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "numba",
    "taichi",
    "cupy"
]

[project.urls]
Home = "https://github.com/karolina-chl/ScientificComputing_Set2"

[project.scripts]
run_main = "src.main:main"
