[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.1"
description = "A collection of classes to complete Assignment Set 2 for Scientific Computing"
authors = [
    { name="Victoria Peterson" },
    { name="Karolina Chlopicka" },
    { name="Paul Jungnickel" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "numba",
    "taichi",
    "cupy"
]

[project.urls]
Home = "https://github.com/karolina-chl/ScientificComputing_Set2"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project.scripts]
gray_scott = "scripts.script_gray_scott:main"
single_run_dla = "scripts.single_run_dla:main"
optimal_omega = "scripts.optimal_omega:main"
many_runs_hist = "scripts.many_runs_hist:main"
monte_carlo_multi = "scripts.script_monte_carlo_sim_multi:main"
monte_carlo_plot_multi = "scripts.script_monte_carlo_plot_multi:main"
monte_carlo = "scripts.script_monte_carlo_single:main"
compare_DLA_MC = "scripts.script_compare_DLA:main"